--- a/IntroductionMemoire/introduction.tex
+++ b/IntroductionMemoire/introduction.tex
@@ -16,12 +16,13 @@
 \section{Introduction}
 
 \vspace{1cm}
-B-ADSC (Bucki – Analyse décisionnelle des Systèmes complexes )  est une méthode dédiée à la conception et à l’analyse des systèmes et des organisations qui de base sur l’approche décisionnelle.
+B-ADSC (Bucki – Analyse décisionnelle des Systèmes complexes )  est une méthode dédiée à la conception et à l’analyse des systèmes et des organisations qui se base sur l’approche décisionnelle.
+
 L'approche décisionnelle des systèmes complexes consiste en la conception, l'analyse et l'optimisation d'une organisation de telle sorte que les savoir-faire et les procédés employés puissent s’exprimer avec le plus d'efficacité et en totale convergence de buts avec la finalité de l'ensemble.
 
 \vspace{0,5cm}
 
-L'analyse décisionnelle des systèmes complexes met l'accent sur la capacité des organisations à prendre des décisions sur le pilotage des processus. 
+L'analyse décisionnelle des systèmes complexes met l'accent sur la capacité des organisations pour prendre des décisions sur le pilotage des processus. 
 Cet conception se base principalement sur la fixation du but principal et l’élaboration des décisions d’une manière intelligente tout en contrôlant leur évolution afin de les amener à une situation en accord avec l’objectif initial.
 
 \vspace{0,5cm}
@@ -30,12 +31,11 @@ Pour B-ADSC, une organisation correspond à une hiérarchie opérationnelle d’
 
 Une activité est chargée du pilotage (régulation) du processus en fonction des objectifs qui lui sont assignés par l'environnement.
 
-L'activité contrôle et valide l'évolution du processus, elle-même restant sous le contrôle du niveau supérieur.  Elle assume deux fonctions fondamentales : la décision et le contrôle et elle communique avec son entourage au moyen de différents flux d’informations.
+L'activité contrôle et valide l'évolution du processus, elle-même restant sous le contrôle du niveau supérieur.  Elle assume deux fonctions fondamentales : la décision et le contrôle, et elle communique avec son entourage au moyen de différents flux d’informations.
 
 \vspace{0,5cm}
 
 Une fois la conception est définie, une modélisation des processus sera nécessaire pour administrer les processus et les optimiser pour chacune des activités qui constitue la hiérarchie de B-ADSC.
-
 Pour ce type de modélisation il existe l’outil DOMIS.
 
 DOMIS permet de documenter les processus, il propose un langage générique fondé sur une vision renouvelée de l’organisation.
@@ -50,19 +50,19 @@ Après une conception B-ADSC et une modélisation avec l’outil DOMIS l’étap
 
 \vspace{0,5cm}
 
-D’après le stage effectué en Master 1 qui consiste la contribution du développement d’une application mobile dont sa conception est basée sur B-ADSC et sa modélisation est basée sur DOMIS, j’ai constaté que la phase qui consiste le passage depuis la modélisation vers le code correspondant prend beaucoup de temps et rencontre souvent des problèmes qui viennent de la mauvaise interprétation du modèle réalisé sur DOMIS.
+D’après le stage effectué en Master 1 qui consiste à la contribution du développement d’une application mobile dont sa conception est basée sur B-ADSC et sa modélisation est basée sur DOMIS, j’ai constaté que la phase qui consiste le passage depuis la modélisation vers le code correspondant, prend beaucoup de temps et rencontre souvent des problèmes dû à la mauvaise interprétation du modèle réalisé sur DOMIS.
 
-La mise en place d’une telle solution va répondre à un vrai besoin pour les développeurs des applications basées sur une modélisation DOMIS, ce besoin a été observé réellement lors du Stage M1 au sein de l’entreprise et a été discuté pour essayer de trouver une solution pour éviter tous les obstacles rencontrés.
+La mise en place d’une telle solution va répondre à un vrai besoin pour les développeurs des applications basées sur une modélisation DOMIS, ce besoin a été observé réellement lors du Stage M1 au sein de l’entreprise, et discuté pour essayer de trouver une solution tout en évitant les obstacles rencontrés.
 
 \vspace{0,5cm}
 
-Jusqu’à présent il n’existe aucune solution qui répond à ce besoin, donc la réalisation consiste tout d’abord de faire une étude sur le concept B-ADSC et sur son outil de modélisation DOMIS, ensuite commencer à chercher la méthodologie et les outils pour créer ce générateur de code automatique, et finalement entamer la partie développement qui consiste la création de ce générateur.
+Jusqu’à présent il n’existe aucune solution qui répond à ce besoin, donc la réalisation consiste tout d’abord d'effectuer une étude sur le concept B-ADSC et sur son outil de modélisation DOMIS, ensuite commencer par chercher la méthodologie et les outils nécessaires à la création de ce générateur de code automatique, et finalement entamer la partie développement qui consiste la création de ce dernier.
 
 La solution proposée peut être valider en la testant sur une partie de modélisation de l’application mobile ‘KOOPT’ qui est déjà modélisé sur DOMIS au sein de l’entreprise GLOOKAL.
 
 \vspace{0,5cm}
 
-Pour conclure, je vois que ma solution proposée répond à un vrai besoin actuel qui consiste d’avoir un code généré automatiquement après une modélisation par DOMIS et ça permet de gagner beaucoup de temps dans la phase de la réalisation d’un projet et d’éviter de nombreux problèmes et bugs qui sont causé la plupart du temps par la mal traduction de la modélisation vers son code correspondant.
+Pour conclure, je vois que ma solution répond à un vrai besoin actuel qui consiste d’avoir un code généré automatiquement après une modélisation par DOMIS, et ça permet de gagner beaucoup de temps dans la phase de la réalisation d’un projet et d’éviter de nombreux problèmes et bugs qui sont causés la plupart du temps par la mauvaise traduction de la modélisation vers son code correspondant.
 
 
 \end{document}
