Add "Etat de l'art"

--- a/MemoireMIAGEM2/introduction.tex
+++ b/MemoireMIAGEM2/introduction.tex
@@ -1,17 +1,10 @@
-\documentclass[a4paper,12pt]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
+
 
 
 \title{La mise en place d'un générateur du code automatique d’après une Modélisation DOMIS}
 
 \author{nadia.maslouhi }
 
-\begin{document}
-
-\maketitle
-
-\vspace{1cm}
 
 \section{Introduction}
 
@@ -38,7 +31,7 @@ L'activité contrôle et valide l'évolution du processus, elle-même restant so
 Une fois la conception est définie, une modélisation des processus sera nécessaire pour administrer les processus et les optimiser pour chacune des activités qui constitue la hiérarchie de B-ADSC.
 Pour ce type de modélisation il existe l’outil DOMIS.
 
-DOMIS permet de documenter les processus, il propose un langage générique fondé sur une vision renouvelée de l’organisation.
+DOMIS permet de documenter les processus, il propose un langage générique fondé sur une vision renouvelée de l’organisation.\cite{domis}
 
 Une organisation correspond ici à une hiérarchie opérationnelle d’activités dans laquelle chaque activité représente un « centre élémentaire de prise des décisions ».
 
@@ -63,6 +56,3 @@ La solution proposée peut être valider en la testant sur une partie de modéli
 \vspace{0,5cm}
 
 Pour conclure, je vois que ma solution répond à un vrai besoin actuel qui consiste d’avoir un code généré automatiquement après une modélisation par DOMIS, et ça permet de gagner beaucoup de temps dans la phase de la réalisation d’un projet et d’éviter de nombreux problèmes et bugs qui sont causés la plupart du temps par la mauvaise traduction de la modélisation vers son code correspondant.
-
-
-\end{document}
