--- a/MemoireMIAGEM2/memoire.tex
+++ b/MemoireMIAGEM2/memoire.tex
@@ -178,7 +178,7 @@ urlcolor=black}
 
 % Title
 \rule{\linewidth}{0.5mm} \\[0.4cm]
-{ \huge \bfseries Générateur du code automatique d’après une Modélisation DOMIS \\[0.4cm] }
+{ \huge \bfseries Prédiction de la stratégie de reprise d'un Web service composite\\[0.4cm] }
 \rule{\linewidth}{0.5mm} \\[1.5cm]
 
 \vfill
@@ -210,7 +210,13 @@ urlcolor=black}
 \end{titlepage}
 \clearpage
 
+\chapter*{Remerciements}
 
+
+Je tiens à remercier toutes les personnes qui m’ont aidée lors de la rédaction de ce mémoire. 
+
+\tableofcontents
+\listoffigures
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Content of the report and references %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -219,7 +225,7 @@ urlcolor=black}
 \pagestyle{fancy}
 
 
-\include{introduction}
+\include{intro}
 \include{Etat_de_l'art}
 
 
