--- a/MemoireMIAGEM2/memoire.tex
+++ b/MemoireMIAGEM2/memoire.tex
@@ -226,6 +226,7 @@ Je tiens à remercier toutes les personnes qui m’ont aidée lors de la rédact
 
 
 \include{intro}
+\include{Concept}
 \include{Etat_de_l'art}
 
 
