--- a/MemoireMIAGEM2/reference.bib
+++ b/MemoireMIAGEM2/reference.bib
@@ -1,9 +1,9 @@
 % This file was created with JabRef 2.8.1.
 % Encoding: UTF8
 
-@book{B-ADSC,
-  author = {Janusz BUCKI },
-  title = {Annalyse décisionnelle des système complexes}, 
+@book{1,
+  author = {R. Angarita . M. Rukoz  . Y. Cardinale },
+  title = {Modeling Dynamic Recovery Strategy for Composite Web Services Execution}
 }
 
 @MISC{badsc,
